--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -553,22 +553,33 @@ h5 {
 
                     /* IMAGE ENVIAR */
 .patient-list {
-    width: fit-content;
+    max-width: 64rem;
     height: fit-content;
     padding: 1rem;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
+    
 }
 .patient-radio-list {
     margin-top: 0rem;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
     background-color: white;
     border-radius: 8px;
-    padding: 1rem;
 }
 .patient-radio-list li {
     list-style-type: none;
+    padding: 0.4rem 2rem;
+}
+.patient-radio-list li:nth-child(odd) {
+    background-color: var(--color-gray-2) /* Define a cor para linhas ímpares */
+}
+.patient-radio-list li:nth-child(even) {
+    background-color:rgb(237, 237, 237); /* Define a cor para linhas pares */
+}
+.patient-radio-list li input[type="radio"] {
+    width: 1.5rem; /* Define a largura */
+    height: 1.5rem; /* Define a altura */
 }
                     /*  FOOTER */
 
