--- a/base_templates/global/partials/search_envio.html
+++ b/base_templates/global/partials/search_envio.html
@@ -5,7 +5,7 @@
             <input 
                 type="search" class="search-input" 
                 name="q" value="{{ search_term }}" required 
-                placeholder="Pesquisa por um nome ou CPF de paciente"
+                placeholder="Filtre um paciente pelo nome ou CPF cadastrado"
             >
             <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
             
