My profile link in menu and header

--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -188,7 +188,10 @@ h5 {
 .hello-user .name {
     font-weight: 500;
 }
-
+.hello-user a{
+    text-decoration: none;
+    color: white;
+}
 
 
                     /*  SEARCH DE PESQUISA  */
