--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -16,8 +16,10 @@
         <div class="header-bottom-responsive">
             <div class="hello-user-container">
                 <h4 class="hello-user">
-                    <span class="hello"> Olá,</span>
-                    <span class="name">{{user.username}}!</span>
+                        <span class="hello"> Olá,</span>
+                    <a href="authors:my_profile">
+                        <span class="name">{{user.username}}!</span>
+                    </a>
                 </h4>
             </div>
         </div>
