New fields added to Model classes

--- a/authors/templates/authors/pages/my_profile.html
+++ b/authors/templates/authors/pages/my_profile.html
@@ -5,6 +5,10 @@
 {% block content %}
 
 <h1>Meu perfil</h1>
-  
+    <!-- Conteúdo específico para recepcionistas -->
+    <h2>Informações do técnico</h2>
+    <p>Nome: {{ user.first_name }}</p>   {{ user.last_name }}</h3>
+
+
 {% endblock content %}
 
