My profile models created and modified

--- a/authors/templates/authors/pages/my_profile.html
+++ b/authors/templates/authors/pages/my_profile.html
@@ -8,6 +8,7 @@
     <!-- Conteúdo específico para recepcionistas -->
     <h2>Informações do técnico</h2>
     <p>Nome: {{ user.first_name }}</p>   {{ user.last_name }}</h3>
+    <h1>{{ola}}</h1>
 
 
 {% endblock content %}
