Fixing send_img fun after model custom users changes

--- a/lab/templates/lab/partials/form_send_micro_pic_partial.html
+++ b/lab/templates/lab/partials/form_send_micro_pic_partial.html
@@ -14,7 +14,7 @@
                 {% if patients %}
                   {% for patient in patients %}
                       <li>
-                          <input type="radio" name="selected_patient" value="{{ patient.id }}">
+                          <input type="radio" name="selected_patient" value="{{ patient.user_id }}">
                          {{ patient.first_name }} {{ patient.last_name }} 
                          <br>
                          
