fixing urls reverses

--- a/lab/templates/lab/partials/user_partial.html
+++ b/lab/templates/lab/partials/user_partial.html
@@ -11,7 +11,7 @@
                 <p><strong> ID: </strong> {{ patient.id }}</p>        
             </div> 
             <div class="button-access-user-space">
-                <a href="{% url 'lab:patient_detail' user_id=patient.id %}" class="btn-access">
+                <a href="{% url 'lab:patient_detail' user_id=patient.user_id %}" class="btn-access">
                     <i class="fas fa-user"></i>‎ ‎ ‎‎‎‎
                     Visualizar perfil
                 </a>
