--- a/authors/templates/authors/pages/my_profile.html
+++ b/authors/templates/authors/pages/my_profile.html
@@ -5,10 +5,18 @@
 {% block content %}
 
 <h1>Meu perfil</h1>
-    <!-- Conteúdo específico para recepcionistas -->
-    <h2>Informações do técnico</h2>
-    <p>Nome: {{ user.first_name }}</p>   {{ user.last_name }}</h3>
-    <h1>{{ola}}</h1>
+    {% for patient in patients %}
+    <div class="center">
+        <p>nome: {{patient.first_name}}</p>
+        <p>sobrenome:{{patient.last_name}}</p>
+        <p>id:{{patient.user_id}}</p>
+        
+    </div>
+   
+        
+        
+        
+    {% endfor %}
 
 
 {% endblock content %}
