--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -538,11 +538,11 @@ h5 {
     border: none;
     border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease, box-shadow 0.5s ease;
 }
 .report-user-access-btn:hover {
-    display: inline-block;
     background-color: var(--color-primary-dark-hover);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 .bxs-binoculars {
     font-size: 1.7rem;
