--- a/lab/templates/lab/pages/patient_detail.html
+++ b/lab/templates/lab/pages/patient_detail.html
@@ -31,7 +31,7 @@
                 <br>
                 <p><strong>Estado:</strong> {{ profile_user.state }}</p>
                 <br>
-                <p><strong>ID:</strong> {{ profile_user.id }}</p>
+                <p><strong>ID:</strong> {{ profile_user.user_id }}</p>
                 <br>
                 <div class="button-access-user-space">
                     <a href="{% url 'lab:reports_profile' user_id=profile_user.user_id %}" class="btn-access-report">
