--- a/base_templates/global/partials/search.html
+++ b/base_templates/global/partials/search.html
@@ -4,7 +4,7 @@
             <input 
                 type="search" class="search-input" 
                 name="q" value="{{ search_term }}" required 
-                placeholder="Pesquisa por um nome ou CPF de paciente"
+                placeholder="Pesquise por um nome ou CPF de algum paciente"
             >
             <button type="submit" class="search-button"><i class="fas fa-search"></i></button>
         </form>
