--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -145,8 +145,8 @@ h5 {
 
 .main-content-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(340px, 1fr));
-    gap: var(--spacing-gutter-large);
+    grid-template-columns: repeat(4, 1fr);
+    gap: 2rem;
     margin-bottom: 5rem
 }
 
@@ -1348,6 +1348,10 @@ h5 {
     .form-button-group {
         margin-bottom: 2rem;
     }
+    /* Pesquisa de paciente */
+    .btn-access {
+        width: 100%;
+    }
 
     /*Pesquisa de laudo*/
     .search-form {
@@ -1511,7 +1515,9 @@ h5 {
 
     /* Pesquisa de paciente */
     .btn-access {
-        width: 100%;
+        height: 7rem;
+        width: auto;
+
     }
 
     /* Detlahes perfil de paciente */
