--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -87,7 +87,7 @@ h5 {
                     /*  PROFILE TABS  */
 
 #container {
-    background-color: #f0f8ff;
+    background-color:white;
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
@@ -118,10 +118,10 @@ h5 {
     width: 100%;
     border: none;
     color: var(--color-dark-text);
-    background-color: #f0f8ff;
+    background-color: var(--color-white);
     border-radius: 8px 8px 0px 0px;
     font-weight: 500;
-    padding: 8px;
+    padding: 1.2rem;
     cursor: pointer;
     transition: background-color .3s ease;
 }
@@ -144,11 +144,43 @@ h5 {
     background-color: #c7d2fe;
     border-radius: 0px 0px 8px 8px;
     padding: 16px;
+    padding-top: 4rem;
+}
+.infos {
+    display: flex;  
+    flex-direction: column;
+    margin: 0 auto;
+    min-height: 30rem;
+}
+.infos .field{
+    display: flex;
+    align-items: baseline;
+    margin-bottom: 1rem;
 }
 
 .content-img {
     width: 50%;
     height: 250px;
+}
+
+            /* PROFILE tabs tec */
+.tab-label-left {
+    background-color: white;
+    border: 0.01px solid var(--color-gray-3);
+    border-radius: 4px;
+    padding: 1rem;
+    min-width: 18rem;
+}
+.tab-data-right{
+    display: flex;
+    justify-content: flex-start;
+    margin-left: 2rem;
+    background-color: white;
+    border: 0.01px solid var(--color-gray-3);
+    border-radius: 4px;
+    color: var(--color-gray-5);
+    padding: 1rem;
+    min-width: 60rem;
 }
 
                     /*  TUDO DO PROJETO PASSADO  */
