My profile link at header changed

--- a/base_templates/global/partials/header.html
+++ b/base_templates/global/partials/header.html
@@ -16,9 +16,9 @@
         <div class="header-bottom-responsive">
             <div class="hello-user-container">
                 <h4 class="hello-user">
-                        <span class="hello"> Olá,</span>
-                    <a href="authors:my_profile">
-                        <span class="name">{{user.username}}!</span>
+                    <a href="{%url 'authors:my_profile' %}">                        
+                       Meu perfil
+                        <i class="fa-solid fa-user i-user-header"></i>
                     </a>
                 </h4>
             </div>
