--- a/base_static/global/css/styles.css
+++ b/base_static/global/css/styles.css
@@ -127,11 +127,11 @@ h5 {
 }
 
 .tab-btn.active {
-    background-color: #c7d2fe;
+    background-color: #f3f3f3;
 }
 
 .tab-btn:hover {
-    background-color: #a5b4fc;
+    background-color: #f3f3f3c5;
 }
 
 .content {
@@ -141,7 +141,7 @@ h5 {
 .content.show {
     display: flex;
     gap: 14px;
-    background-color: #c7d2fe;
+    background-color: #f3f3f3;
     border-radius: 0px 0px 8px 8px;
     padding: 16px;
     padding-top: 4rem;
@@ -167,7 +167,8 @@ h5 {
 .tab-label-left {
     background-color: white;
     border: 0.01px solid var(--color-gray-3);
-    border-radius: 4px;
+    border-radius: 8px;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
     padding: 1rem;
     min-width: 18rem;
 }
@@ -177,7 +178,8 @@ h5 {
     margin-left: 2rem;
     background-color: white;
     border: 0.01px solid var(--color-gray-3);
-    border-radius: 4px;
+    box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
     color: var(--color-gray-5);
     padding: 1rem;
     min-width: 60rem;
@@ -280,12 +282,20 @@ h5 {
     color: var(--color-gray-9);
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-.hello-user .name {
-    font-weight: 500;
-}
+
 .hello-user a{
     text-decoration: none;
     color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: color .2s ease;
+}
+.hello-user a:hover {
+    color: var(--color-primary-dark-hover);
+}
+.hello-user a .i-user-header {
+    margin-top: 1rem;
 }
 
 
