--- a/lab/templates/lab/partials/form_send_micro_pic_partial.html
+++ b/lab/templates/lab/partials/form_send_micro_pic_partial.html
@@ -1,5 +1,7 @@
+
 <div class="main-content container">
     <form 
+    id="form-send-mic"
     class ="main-form" 
     action="{{ form_action }}" 
     method="POST"
@@ -70,3 +72,4 @@
       </div>
     </form>
 </div>
+
