Fixing h4 position and classes names

--- a/authors/templates/authors/partials/profiles/patient_profile_tabs.html
+++ b/authors/templates/authors/partials/profiles/patient_profile_tabs.html
@@ -18,7 +18,7 @@
         <div class="content" id="data-patient">
             <div class="infos">
 
-                <h4 class="tab-patient-h4-top">Informações pessoais</h4>
+                <h4 class="tab-user-h4-top">Informações pessoais</h4>
 
                 <div class="field">
                     <div class="tab-label-left">
@@ -56,7 +56,7 @@
                     </div>
                 </div>
 
-                <h4 class="tab-patient-h4">Endereço</h4>
+                <h4 class="tab-user-h4">Endereço</h4>
 
                 <div class="field">
                     <div class="tab-label-left">
@@ -94,7 +94,7 @@
                     </div>
                 </div>
 
-                <h4 class="tab-patient-h4">Cadastro</h4>
+                <h4 class="tab-user-h4">Cadastro</h4>
 
                 <div class="field">
                     <div class="tab-label-left">
