--- a/authors/templates/authors/partials/profiles/recpt_profile_tabs.html
+++ b/authors/templates/authors/partials/profiles/recpt_profile_tabs.html
@@ -21,7 +21,7 @@
         <div class="content" id="data-recpt">
             <div class="infos">
 
-                <h4 class="tab-patient-h4-top">Informações pessoais</h4>
+                <h4 class="tab-user-h4-top">Informações pessoais</h4>
 
                 <div class="field">
                     <div class="tab-label-left">
@@ -44,7 +44,7 @@
 
         <div class="content" id="registered-patients-recpt">
             <div class="infos">
-                <div class="main-content-list">
+                <div class="patients-created-list">
 
                     {% for patient in patients %}
                         <div class="user-profile-details">
