--- a/authors/templates/authors/partials/profiles/tec_profile_tabs.html
+++ b/authors/templates/authors/partials/profiles/tec_profile_tabs.html
@@ -21,7 +21,7 @@
         <div class="content" id="data-tec">
             <div class="infos">
 
-                <h4 class="tab-patient-h4-top">Informações pessoais</h4>
+                <h4 class="tab-user-h4-top">Informações pessoais</h4>
                 
                 <div class="field">
                     <div class="tab-label-left">
